@@ -13,11 +13,15 @@ public class RoomType {
     private String imagePath;
     private List<String> features;
     private boolean featured;
-
+    
+    private String description;
+    private List<String> extraImages;
+    
     public RoomType() {}
 
     public RoomType(int typeId, String name, String bedType, int capacity,
-        double price, String imagePath, List<String> features, boolean featured) {
+        double price, String imagePath, List<String> features,
+        boolean featured,String description, List<String> extraImages) {
 	        this.typeId = typeId;
 	        this.name = name;
 	        this.bedType = bedType;
@@ -26,16 +30,48 @@ public class RoomType {
 	        this.imagePath = imagePath;
 	        this.features = features;
 	        this.featured = featured;
+	        
+	        this.description = description;
+	        this.extraImages = extraImages;
     }
 
     public String featuresToString(){
+        if(features == null){
+            return "";
+        }
+
         return String.join("|", features);
     }
-
+    
     public static List<String> stringToFeatures(String text){
-        return Arrays.asList(text.split("\\|"));
+        if(text == null || text.isEmpty()){
+            return List.of();
+        }
+
+        return Arrays.asList(
+            text.split("\\|")
+        );
+    }
+    
+    public String extraImagesToString(){
+        if(extraImages == null){
+            return "";
+        }
+
+        return String.join("|", extraImages);
+    }
+    
+    public static List<String> stringToImages(String text){
+        if(text == null || text.isEmpty()){
+            return List.of();
+        }
+
+        return Arrays.asList(
+            text.split("\\|")
+        );
     }
 
+    //getters y setters
     public int getTypeId() {
         return typeId;
     }
@@ -68,13 +104,29 @@ public class RoomType {
         return features;
     }
     
-    public void setName(String name){this.name=name;}
-    public void setBedType(String bedType){this.bedType=bedType;}
-    public void setCapacity(int capacity){this.capacity=capacity;}
-    public void setPrice(double price){this.price=price;}
-    public void setImagePath(String imagePath){this.imagePath=imagePath;}
-    public void setFeatures(List<String> features){this.features=features;}
-    public void setFeatured(boolean featured){this.featured=featured;}
+    public String getDescription(){
+        return description;
+    }
+
+    public List<String> getExtraImages(){
+        return extraImages;
+    }
+    
+    public void setDescription(String description){
+        this.description = description;
+    }
+
+    public void setExtraImages(List<String> extraImages){
+        this.extraImages = extraImages;
+    }
+    
+    public void setName(String name){ this.name = name; }
+    public void setBedType(String bedType){ this.bedType = bedType; }
+    public void setCapacity(int capacity){ this.capacity = capacity; }
+    public void setPrice(double price){ this.price = price; }
+    public void setImagePath(String imagePath){ this.imagePath = imagePath; }
+    public void setFeatures(List<String> features){ this.features = features; }
+    public void setFeatured(boolean featured){ this.featured = featured; }
 
     public boolean isFeatured() {
         return featured;
